<resources>
    <string name="app_name">Controle Robo</string>
    <string name="botao_esq">Esquerda</string>
    <string name="botao_dir">Direita</string>
    <string name="botao_frente">Frente</string>
    <string name="botao_re">Reverso</string>
    <string name="botao_conectar">Conectar</string>
    <string name="botao_desconectar">Desconectar</string>
    <string name="erro_conexao">Ocorreu um erro durante a conexão D:</string>
    <string name="conectado">Conectado :D</string>
</resources>
