<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufjf.ieee.controlerobo.MainActivity">

    <EditText
        android:id="@+id/statusMessage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnConectar"
        android:layout_marginLeft="@dimen/margem_botoes"
        android:layout_marginStart="@dimen/margem_botoes"
        android:layout_marginRight="@dimen/margem_botoes"
        android:layout_marginEnd="@dimen/margem_botoes"
        android:layout_toStartOf="@+id/layoutBotoes"
        android:layout_toLeftOf="@+id/layoutBotoes"
        android:textColor="#ffffffff"
        android:background="#ff000000"
        android:inputType="none"
        android:focusable="false"
        android:cursorVisible="false"
        android:gravity="top"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/btnConectar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:text="@string/botao_conectar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margem_botoes"
        android:layout_marginStart="@dimen/margem_botoes"
        android:layout_marginRight="@dimen/margem_botoes"
        android:layout_marginEnd="@dimen/margem_botoes"
        android:layout_toStartOf="@+id/layoutBotoes"
        android:layout_toLeftOf="@+id/layoutBotoes"/>

    <LinearLayout
        android:id="@+id/layoutBotoes"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="right">

        <LinearLayout
            android:id="@+id/linearLayoutEsq"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnDir"
                android:layout_width="@dimen/dimensoes_botoes"
                android:layout_height="@dimen/dimensoes_botoes"
                android:layout_gravity="center"
                android:text="@string/botao_dir" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMeio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margem_botoes"
            android:layout_marginStart="@dimen/margem_botoes"
            android:layout_marginRight="@dimen/margem_botoes"
            android:layout_marginEnd="@dimen/margem_botoes">

            <Button
                android:id="@+id/btnFrente"
                android:layout_width="@dimen/dimensoes_botoes"
                android:layout_height="@dimen/dimensoes_botoes"
                android:text="@string/botao_frente"
                android:layout_marginBottom="@dimen/margem_botoes"/>

            <Button
                android:id="@+id/btnRev"
                android:layout_width="@dimen/dimensoes_botoes"
                android:layout_height="@dimen/dimensoes_botoes"
                android:text="@string/botao_re" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDir"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="@dimen/margem_botoes"
            android:layout_marginEnd="@dimen/margem_botoes">

            <Button
                android:id="@+id/btnEsq"
                android:layout_width="@dimen/dimensoes_botoes"
                android:layout_height="@dimen/dimensoes_botoes"
                android:layout_gravity="center"
                android:text="@string/botao_esq" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
